<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by  Mobile Dev Team  on 1/12/20 10:32 AM
  ~ Copyright (c) Resala Charity Organization. All rights reserved.
  -->


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />


        <variable
                name="viewmodel"
                type="com.resala.mobile.qrregister.ui.eventdetailsfragment.EventDetailsVm" />


    </data>

    <LinearLayout
            android:id="@+id/new_volunteer_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="@dimen/_70sdp"
            app:layout_behavior="@string/bottom_sheet_behavior">


        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardUseCompatPadding="true">


            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="@dimen/_17sdp"
                        android:paddingEnd="@dimen/_17sdp">

                    <Space
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_7sdp" />


                    <View
                            android:layout_width="@dimen/_55sdp"
                            android:layout_height="@dimen/_3sdp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/drag_handler" />

                    <Space
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_10sdp" />


                    <Space
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_10sdp" />

                    <TextView
                            android:id="@+id/drag_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/drag_to_register_new_volunteer"
                            android:textAllCaps="true"
                            android:textColor="@color/warm_grey"
                            android:visibility="@{viewmodel.isSheetHidden ? View.VISIBLE : View.GONE}" />

                    <TextView
                            android:id="@+id/fill_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/please_fill_in_the_following_fields"
                            android:textAllCaps="true"
                            android:textColor="@color/warm_grey"
                            android:visibility="@{viewmodel.isSheetHidden ? View.GONE : View.VISIBLE }" />

                    <Space
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_10sdp" />

                    <View
                            android:id="@+id/lineseprator"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/btn_semi_grey"
                            android:visibility="@{viewmodel.isSheetHidden ?View.GONE : View.VISIBLE }" />

                    <Space
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_10sdp" />


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <EditText
                                android:id="@+id/etEmail"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789 abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ .!@#$%^*?_-"
                                android:hint="@string/email_address"
                                android:inputType="textEmailAddress" />

                        <Space
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_10sdp" />

                        <EditText
                                android:id="@+id/etBranchId"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Branch ID" />

                        <Space
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_10sdp" />


                        <EditText
                                android:id="@+id/etEventId"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Event ID" />

                        <Space
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_15sdp" />


                        <Spinner
                                android:id="@+id/spinnerGender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:entries="@array/gender"
                                android:spinnerMode="dropdown" />

                        <Space
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_15sdp" />


                        <EditText
                                android:id="@+id/etName"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789 abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ .!@#$%^*?_-"
                                android:hint="Name"
                                android:inputType="textPersonName" />

                        <Space
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_10sdp" />


                        <EditText
                                android:id="@+id/etPhoneNumber"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="0123456789 abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ .!@#$%^*?_-"
                                android:hint="@string/phone_number"
                                android:inputType="phone" />

                        <Space
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_10sdp" />

                        <EditText
                                android:id="@+id/etRegionId"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Region ID" />

                        <Space
                                android:layout_width="0dp"
                                android:layout_height="@dimen/_10sdp" />
                    </LinearLayout>


                    <Space
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_10sdp" />


                    <Button
                            android:id="@+id/btnRegisterData"
                            style="@style/ButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="@{() -> viewmodel.registerData()}"
                            android:gravity="center"
                            android:text="@string/register"
                            android:textAllCaps="true" />


                    <Space
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_15sdp" />


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
