<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewmodel"
                type="com.resala.mobile.qrregister.ui.loginfragment.LoginVm" />

    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="@dimen/_170sdp"
                    android:contentDescription="resala_logo"
                    android:padding="@dimen/_15sdp"
                    android:scaleType="fitStart"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:srcCompat="@drawable/resala_logo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.0">


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etInputId"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:hint="@string/id"
                        app:layout_constraintEnd_toEndOf="@id/guideline2"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/idEditText"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                            android:drawablePadding="@dimen/_8sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etInputPassword"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="0dp"
                        android:layout_marginTop="16dp"
                        android:hint="@string/password"
                        app:layout_constraintEnd_toEndOf="@id/guideline2"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/etInputId"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEditText"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_lock_black_24dp"
                            android:drawablePadding="@dimen/_8sdp"
                            android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/btn_gradient"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{() -> viewmodel.doLogin()}"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingTop="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@+id/forgotPassTextView"
                        app:srcCompat="@drawable/ic_login" />

                <TextView
                        android:id="@+id/forgotPassTextView"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/forgot"
                        android:textColor="@color/warm_grey"
                        android:textStyle="normal"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="@+id/guideline2"
                        app:layout_constraintTop_toBottomOf="@+id/etInputPassword" />

                <TextView
                        android:id="@+id/loginTextView"
                        style="@style/TextViewStyle"
                        android:layout_marginStart="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{() -> viewmodel.doLogin()}"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintBottom_toBottomOf="@+id/loginButton"
                        app:layout_constraintStart_toEndOf="@+id/loginButton"
                        app:layout_constraintTop_toTopOf="@+id/loginButton" />

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="32dp" />

                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="32dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="@dimen/_170sdp"
                    android:layoutDirection="ltr"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_shape_bg1" />

            <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_170sdp"
                    android:layout_height="@dimen/_170sdp"
                    android:layoutDirection="ltr"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_shape_bg2" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>